Move jvm options from Dockerfile to entrypoint.sh